--- a/cryptox/index-2.html
+++ b/cryptox/index-2.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
         <!-- Header area start -->
         <header class="header-area">
-            <div class="header-top-area">
+            <div class="header-top-area header-top-2">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-md-8">
