--- a/cryptox/index.html
+++ b/cryptox/index.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
         <!-- Header area start -->
         <header class="header-area">
-            <div class="header-top-area">
+            <div class="header-top-area header-top-2">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-md-8">
@@ -87,7 +87,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col-lg-2 col-md-2 hidden-sm">
+                        <div class="col-lg-2 col-md-2 hidden-sm hidden-xs">
                             <div class="header-btn">
                                 <a href="#" class="button">GET A Quote</a>
                             </div>
@@ -538,8 +538,96 @@
                 </div>
             </div>
             <!-- xboot call to action section start -->
+            <!-- xboot team section start -->
+            <div class="xboot-section team-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="area-heading text-center">
+                                <h2 class="area-title">Our Creative Team</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ullam odio minima itaque, modi unde facere fugit aliquid eum necessitatibus. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member wow fadeIn" data-wow-delay="0.2s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team1.png" class="center-block img-responsive" alt="">
+                                    <ul class="member-bookmark">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="member-content">
+                                    <h4>Maddy Bowen</h4>
+                                    <p>ceo & Founder</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member wow fadeIn" data-wow-delay="0.4s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team2.png" class="center-block img-responsive" alt="">
+                                    <ul class="member-bookmark">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="member-content">
+                                    <h4>dany archer</h4>
+                                    <p>Developer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member wow fadeIn" data-wow-delay="0.6s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
+                                    <ul class="member-bookmark">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="member-content">
+                                    <h4>solomon vandy</h4>
+                                    <p>Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member wow fadeIn" data-wow-delay="0.6s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
+                                    <ul class="member-bookmark">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="member-content">
+                                    <h4>solomon vandy</h4>
+                                    <p>Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- xboot team section end -->              
             <!-- testimonial area start -->
-            <div class="xboot-section testimonial-section">
+            <div class="xboot-section testimonial-section gray-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -653,12 +741,17 @@
                         </div>
                         <div class="col-sm-12 col-md-12 col-lg-6">
                             <div class="subscription-box">
-                                <form class="subscription-form" method="POST" action="php/subscribe.php">
+                                <form class="subscription-form" method="POST" action="https://masudrana.us14.list-manage.com/subscribe/post?u=bbaf30c9498959598e94abea6&amp;id=ea892eba33">
                                     <div class="subscribe-input">
-                                        <input type="email" class="subscribe-control" placeholder="Enter Your Email">
+                                        <input type="email" id="subscriber-email" class="subscribe-control" name="subscribe" placeholder="Enter Your Email">
                                     </div>
                                     <div class="subscribe-input">
                                         <button class="button email-submit-btn btn-white" type="submit">Subscribe<i class="fa fa-paper-plane"></i></button>
+                                    </div>
+                                    <div class="form-information">
+                                        <h5 class="subscription-success text-success"></h5>
+                                        <h5 class="subscription-error text-danger"></h5>
+                                        <label class="subscription-label" for="subscriber-email"></label>
                                     </div>
                                 </form>
                             </div>
