--- a/cryptox/index.html
+++ b/cryptox/index.html
@@ -551,74 +551,74 @@
                     </div>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
-                            <div class="single-team-member wow fadeIn" data-wow-delay="0.2s">
+                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.2s">
                                 <div class="member-thumbnail">
                                     <img src="img/team/team1.png" class="center-block img-responsive" alt="">
-                                    <ul class="member-bookmark">
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
                                 </div>
                                 <div class="member-content">
                                     <h4>Maddy Bowen</h4>
                                     <p>ceo & Founder</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="single-team-member wow fadeIn" data-wow-delay="0.4s">
-                                <div class="member-thumbnail">
-                                    <img src="img/team/team2.png" class="center-block img-responsive" alt="">
                                     <ul class="member-bookmark">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
+                                    </ul>                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team2.png" class="center-block img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
                                     <h4>dany archer</h4>
                                     <p>Developer</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="single-team-member wow fadeIn" data-wow-delay="0.6s">
-                                <div class="member-thumbnail">
-                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
                                     <ul class="member-bookmark">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
-                                </div>
-                                <div class="member-content">
-                                    <h4>solomon vandy</h4>
-                                    <p>Designer</p>
+                                    </ul>                                    
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="single-team-member wow fadeIn" data-wow-delay="0.6s">
+                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.6s">
                                 <div class="member-thumbnail">
-                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
+                                    <img src="img/team/team4.png" class="center-block img-responsive" alt="">
+                                </div>
+                                <div class="member-content">
+                                    <h4>solomon vandy</h4>
+                                    <p>Designer</p>
                                     <ul class="member-bookmark">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
+                                    </ul>                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.6s">
+                                <div class="member-thumbnail">
+                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
                                     <h4>solomon vandy</h4>
                                     <p>Designer</p>
+                                    <ul class="member-bookmark">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    </ul>                                    
                                 </div>
                             </div>
                         </div>
